<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 CMPUT301W18T18
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ca.ualberta.cs.wrkify.EditTaskActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/editTaskTitleSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:elevation="1dp">
            <TextView
                android:id="@+id/editTaskTitleLabel"
                android:labelFor="@id/editTaskTitleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/editTaskTitleField"
                app:layout_constraintLeft_toLeftOf="@id/editTaskTitleField"
                android:layout_marginStart="4dp"
                android:text="@string/edit_task_title_label"
                style="@style/Base.TextAppearance.AppCompat.Caption" />

            <EditText
                android:id="@+id/editTaskTitleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:singleLine="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:inputType="textCapSentences"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/editTaskDescriptionLabel"
            android:labelFor="@id/editTaskDescriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_description_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toTopOf="@+id/editTaskDescriptionField"
            app:layout_constraintStart_toStartOf="@id/editTaskDescriptionField"
            android:layout_marginStart="4dp" />

        <EditText
            android:id="@+id/editTaskDescriptionField"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/editTaskTitleSheet"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/editTaskLocationLabel"
            android:labelFor="@id/editTaskLocationField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toTopOf="@+id/editTaskLocationField"
            app:layout_constraintStart_toStartOf="@id/editTaskLocationField"
            android:layout_marginStart="4dp" />

        <Button
            android:id="@+id/editTaskLocationField"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="Set Location"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@id/editTaskDescriptionField"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_checklist_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@id/editTaskDivider"
            app:layout_constraintStart_toStartOf="@id/editTaskDivider"/>

        <FrameLayout
            android:id="@+id/editTaskDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E000000"
            app:layout_constraintTop_toBottomOf="@id/editTaskLocationField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"/>

        <ca.ualberta.cs.wrkify.CheckListEditorView
            android:id="@+id/editTaskChecklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTaskDivider"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:visibility="gone" />

        <!-- TODO shouldn't there be a way to attach an icon to a button? -->
        <Button
            android:id="@+id/editTaskButtonChecklistNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+  Add checklist"
            app:layout_constraintTop_toBottomOf="@id/editTaskDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/editTaskButtonChecklistAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTaskChecklist"
            app:layout_constraintLeft_toLeftOf="@id/editTaskChecklist"
            android:layout_marginStart="8dp"
            android:text="+  Add item"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
